<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Shift•t</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh_location">Refresh Location</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Settings -->
    <string name="pref_category_twitter">Twitter Search</string>
    <string name="pref_category_location">Last Known Location</string>

    <string name="pref_category_key_twitter">twitter_category</string>
    <string name="pref_category_key_location">location_category</string>

    <string name="pref_key_twitter_radius_size_key">twitter_search_size_key</string>
    <string name="pref_key_twitter_radius_unit_key">twitter_search_units_key</string>
    <string name="pref_key_location">location</string>

    <string name="pref_twitter_search_radius_size_name">Radius size</string>
    <string name="pref_twitter_default_search_radius_size">9</string>
    <string name="pref_twitter_default_search_radius_units" tools:ignore="ExtraTranslation">km</string>

    <string name="pref_twitter_search_radius_unit_title">Radius unit</string>
    <string-array name="pref_twitter_search_radius_unit_labels">
        <item>Kilometers</item>
        <item>Miles</item>
    </string-array>
    <string-array name="pref_twitter_search_radius_unit_values">
        <item>km</item>
        <item>mi</item>
    </string-array>

    <string name="pref_location_lat_name">Latitude</string>
    <string name="pref_location_lat_key">latitude_shared_preference_key</string>
    <string name="pref_location_lon_name">Longitude</string>
    <string name="pref_location_lon_key">longitude_shared_preference_key</string>
    <string name="pref_location_time_name">Time</string>
    <string name="pref_location_time_key">location_time_shared_preference_key</string>

    <!-- twitter settings -->
    <!--suppress AndroidDomInspection -->
    <string name="com.twitter.sdk.android.CONSUMER_KEY" tools:ignore="ExtraTranslation">@string/twitter_consumer_key</string>
    <!--suppress AndroidDomInspection -->
    <string name="com.twitter.sdk.android.CONSUMER_SECRET" tools:ignore="ExtraTranslation">@string/twitter_consumer_secret</string>

    <!-- snack bar -->
    <string name="snackbar_connect_button_label">Reload</string>
    <string name="snackbar_error_button_label">Try Again</string>
    <string name="snackbar_connected_message">Connected to Internet. Retry Loading %1$s</string>
    <string name="snackbar_connected_message_map_suffix">More Map Items</string>
    <string name="snackbar_connected_message_trends_suffix">Trends</string>
    <string name="snackbar_connected_message_tweets_suffix">Tweets</string>
    <string name="snackbar_no_connection_message">No Connection. Check connection for
        the latest activity</string>
    <string name="snackbar_error_message">Something Went Wrong</string>

    <!-- map ui strings -->
    <string name="map_location_label">lat: %1$f, lon: %2$f</string>
    <string name="map_location_no_data">No much of a Tweet in this area</string>
    <string name="trends_empty_view_message">No thing trending is this area.</string>
    <string name="tweets_empty_view_message">No tweet to show in this area.</string>
    <string name="content_des_refresh_button">Refresh location</string>
    <string name="content_des_locate">Center map to your location</string>
    <string name="content_des_fab_open">Open action menut</string>
    <string name="content_des_fab_map">Show twitter activity in your area</string>
    <string name="content_des_fab_trends">Show trends in your area</string>
    <string name="content_des_logo">Shiftt</string>
    <string name="content_des_list_item_trend">trend</string>
    <string name="trend_list_no_volume">-</string>

    <!-- no location dialog strings -->
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="noLocation_dialog_message">Shiftt needs location service to work. Please try
        again and accept permissions requested.</string>
    <string name="noLocation_dialog_title">Location Permission Requested</string>

</resources>
